# bbcoach

./: .env.example  AGENTS.md  MIGRATION.md  MIGRATION_PHASE_2_COMPLETE.md  MIGRATION_STATUS.md  PHASE_3_COMPLETE.md  README.md  all_teams.json  app.py  check_models.py  check_syntax_v8.py  debug_analysis.py  debug_stats.py  find_missing.py  inspect_data.py  inspect_first_cell.py  inspect_genius_html.py  inspect_page.py  inspect_players.py  inspect_schedule_dates.py  inspect_tables.py  inspect_thead.py  inspect_timur.py  links.json  main.py  page_dump.html  page_dump_bb.html  page_dump_genius.html  past_season_links.json  populate_vector_store.py  pyproject.toml  run_genius_scraper.py  run_genius_scraper_v2.py  scrape_missing.py  setup.sh  start-api.sh  team_page_dump.html  team_page_info.json  test_api.py  test_scrape.py  (+7 more)
.vectordb/: chroma.sqlite3
api/: README.md  __init__.py  main.py
assets/: style.css
data_storage/: metadata.json  players.parquet  players_backup.parquet  players_genius.parquet  schedule.parquet  teams.parquet
src/bbcoach/: analysis.py
src/bbcoach/ai/: coach.py
src/bbcoach/config/: __init__.py  settings.py
src/bbcoach/core/: __init__.py  (+3 more)
tests/: test_api.py  test_data_integrity.py  test_genius_scraper.py  test_league_separation.py  test_scrape.py  test_scraper_component.py  test_storage.py
web/: .eslintrc.json  README.md  error.tsx  package.json  start.sh  tsconfig.json
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/hooks/: use-api.ts  use-app-store.ts
web/lib/: api-client.ts  utils.ts
web/types/: api.ts
(+19 files in other folders)
